changes to blog/weather/ new php

--- a/public/css/Positioning.css
+++ b/public/css/Positioning.css
@@ -28,7 +28,7 @@
 			
 		}
 		.neworange {
-			background-color: orange;
+			background-color: orange;w
 		}
 		.newyellow {
 			background-color: yellow;
